--- a/scrollviewgallery/Base.lproj/Main.storyboard
+++ b/scrollviewgallery/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,33 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="JoB-tg-8jv">
+                                <rect key="frame" x="281" y="497" width="39" height="37"/>
+                            </pageControl>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cjh-mr-BXX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Cjh-mr-BXX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0oT-L7-eYU"/>
+                            <constraint firstItem="Cjh-mr-BXX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7Bg-Uk-zlw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Cjh-mr-BXX" secondAttribute="bottom" id="E44-ia-lNK"/>
+                            <constraint firstAttribute="trailing" secondItem="Cjh-mr-BXX" secondAttribute="trailing" id="c5N-Ie-izG"/>
+                            <constraint firstItem="Cjh-mr-BXX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ccq-Pc-Xbg"/>
+                            <constraint firstItem="Cjh-mr-BXX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rVV-D7-9Qr"/>
+                            <constraint firstItem="JoB-tg-8jv" firstAttribute="centerX" secondItem="Cjh-mr-BXX" secondAttribute="centerX" id="vRp-bF-Sk6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="pageControl" destination="JoB-tg-8jv" id="5ID-Uz-ONO"/>
+                        <outlet property="scrollView" destination="Cjh-mr-BXX" id="b29-V8-zYU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="496" y="414"/>
         </scene>
     </scenes>
 </document>
